[gd_scene load_steps=6 format=3 uid="uid://c7ady62any2b0"]

[ext_resource type="Script" uid="uid://d0fv7bhim0no5" path="res://addons/auto_structured/ui/panels/module_library_panel.gd" id="1_4xkd7"]
[ext_resource type="Texture2D" uid="uid://bp051udsevt4u" path="res://addons/auto_structured/assets/icon_GUI_tab_menu_hl.svg" id="2_4xkd7"]
[ext_resource type="Texture2D" uid="uid://cklj47goa3tag" path="res://addons/auto_structured/assets/add.svg" id="3_hnxsx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwgey"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmuhx"]

[node name="ModuleLibrary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4xkd7")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LibrarySelectorBar" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LibraryOptionButton" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/LibrarySelectorBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_to_longest_item = false

[node name="LibraryMenuButton" type="MenuButton" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/LibrarySelectorBar"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("2_4xkd7")
switch_on_hover = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SearchTileEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
clear_button_enabled = true

[node name="AddTileButton" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
tooltip_text = "Add Tile/s"
texture_normal = ExtResource("3_hnxsx")
stretch_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_mwgey")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jmuhx")

[node name="TileList" type="ItemList" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
auto_width = true
auto_height = true
max_columns = 2
same_column_width = true
fixed_column_width = 560
icon_mode = 0
